--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<p>hi noah</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Your Page Title</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <p>hi noah</p>
+    <script src="script.js"></script>
+</body>
+</html>
