--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>Meredith Baker</h1>
     <p>hi noah</p>
     <script src="script.js"></script>
 </body>
